2021-08-20 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/r2k/*.s,
	  device/lib/r2ka/*.s:
	  Fix library functions for new calling convention.

2021-08-20 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/ports/ez80-z80/spec.mk,
	  support/regression/ports/ucr2k/spec.mk,
	  support/regression/ports/ucr2ka/spec.mk:
	  Do not use --profile in regression testing, since it conflicts with register arguments.

2021-08-20 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/_memset.c,
	  device/lib/z180/memcpy.s,
	  device/lib/z180/memmove.s,
	  device/lib/z80/memcpy.s,
	  device/lib/z80/memmove.s,
	  device/lib/z80n/memcpy.s,
	  device/lib/z80n/memmove.s,
	  device/lib/r3ka/memcpy.s,
	  device/lib/r3ka/memmove.s,
	  device/lib/r3ka/strcpy.s,
	  device/lib/r3ka/divmixed.s,
	  device/lib/r3ka/divsigned.s,
	  device/lib/r3ka/modmixed.s,
	  device/lib/r3ka/mulchar.s:
	  Fix library functions for new calling convention.

2021-08-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Do not use some aspects of new calling convention for banked functions.

2021-08-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c,
	  support/valdiag/tests/callingconvention.c,
	  support/valdiag/valdiag.py:
	  Fix diagnostics for __raisonance calling convention.

2021-08-14 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCval.c (valCastLiteral): possibly fix bug #3273

2021-08-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c,
	  support/valdiag/tests/callingconvention.c:
	  Diagnostics for conflicting calling conventions.

2021-08-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peep.c:
	  Fix buffer overflow reported in patch #397 by Arnout Engelen.

2021-08-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/main.c,
	  doc/sdccman.lyx:
	  .version:
	  Enable new calling convention for gbz80.

2021-08-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmain.c,
	  doc/sdccman.lyx:
	  Macro for calling convention ABI version.
